--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,14 @@
-# Streamlit Settings
+[theme]
+
+# The preset Streamlit theme that your custom theme inherits from.
+# One of "light" or "dark".
+base = "light"
+
+# Font family for all text in the app, except code blocks. One of "sans serif",
+# "serif", or "monospace".
+font = "sans serif"
+
+[server]
+# Automatically rerun script when the file is modified on disk.
+# Default: false
+runOnSave = false
